--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cloudinary/url-gen": "^1.19.0",
     "antd": "^5.17.1",
     "axios": "^1.7.2",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.23.0",
