--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.3.7",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "animate.css": "^4.1.1",
     "antd": "^5.17.1",
     "axios": "^1.7.2",
     "lodash.debounce": "^4.0.8",
