--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
+    "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
     "tailwindcss": "^3.4.4",
     "zustand": "^4.5.4"
