--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "react-swipeable": "^7.0.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.4",
     "zustand": "^4.5.4"
   },
