--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
